<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/back"
                        android:textAllCaps="false"
                        android:textColor="#2196F3"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="@string/appearance"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal" />

            </FrameLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_theme_auto_night_mode"
                    android:textAllCaps="true"
                    android:textColor="#90FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="100dp"
                    android:background="@drawable/first_sms"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingStart="5dp">

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#2196F3" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            tools:ignore="NestedWeights">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginStart="7dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/bob_harris"
                                android:textAllCaps="false"
                                android:textColor="#2196F3"
                                android:textSize="16sp"
                                android:textStyle="normal" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginStart="7dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/good_morning"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="normal" />


                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1.5"
                            android:gravity="bottom"
                            android:text="@string/do_you_know_what_time_it_is"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            android:textStyle="normal"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginStart="7dp"
                            android:layout_weight="0.5"
                            android:gravity="end"
                            android:text="@string/_12_20_am"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="9sp"
                            android:textStyle="normal"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="100dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/second_sms"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/it_s_morning_in_tokyo"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="normal"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="end|center_vertical"
                        android:text="@string/_12_20_am"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        android:textStyle="normal"
                        tools:ignore="SmallSp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_background"
                android:padding="10dp"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_main"
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_height="100dp"/>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:text="@string/chat_theme"
                            android:textStyle="normal"
                            android:textAllCaps="false"
                            android:textSize="22sp"
                            android:textColor="@color/white"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_next"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="#90DDDDDD"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:text="@string/chat_background"
                            android:textStyle="normal"
                            android:textAllCaps="false"
                            android:textSize="22sp"
                            android:textColor="@color/white"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_next"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:background="@drawable/simple_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:text="@string/night_mode"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="#E6999999"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#90DDDDDD"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:text="@string/auto_night_mode"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:text="@string/system"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="#E6999999"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_next"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:background="@drawable/simple_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:text="@string/text_size"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:text="@string/system"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="#E6999999"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_next"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#90DDDDDD"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:text="@string/message_corners"
                        android:textStyle="normal"
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_next"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>